UV Editor: Area repaint not happening consistently after selection change in 3D viewport #66456

Closed
opened 2019-07-05 07:02:06 +02:00 by eldee smith · 10 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.22

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 13:31, hash: e7356bb011
Worked: (optional)

Short description of error
Selection changes in a 3D viewport are not triggering a repaint of the UV editor, which causes the two views to be desynchronized until another event forces a repaint (such as zooming in/out)

Exact steps for others to reproduce the error
See attached video
window_repaint_issue.mp4

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.22 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 13:31, hash: `e7356bb011` Worked: (optional) **Short description of error** Selection changes in a 3D viewport are not triggering a repaint of the UV editor, which causes the two views to be desynchronized until another event forces a repaint (such as zooming in/out) **Exact steps for others to reproduce the error** See attached video [window_repaint_issue.mp4](https://archive.blender.org/developer/F7567358/window_repaint_issue.mp4)
Author

Added subscriber: @testure

Added subscriber: @testure

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this with the latest build. Please ALWAYS use the latest blender beta when reporting issues.

I can not reproduce this with the latest build. Please ALWAYS use the latest blender beta when reporting issues.
Author

This is happening with the latest version from the buildbot with factory settings loaded. Here is a video with simplified repro:
repaint_redux.mp4

This is happening with the latest version from the buildbot with factory settings loaded. Here is a video with simplified repro: [repaint_redux.mp4](https://archive.blender.org/developer/F7568001/repaint_redux.mp4)
Brecht Van Lommel was assigned by Sebastian Parborg 2019-07-05 17:07:50 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

@brecht it seems like the mouse deselect all action is not triggering redraws (other keybinds like alt+a is).

@brecht it seems like the mouse deselect all action is not triggering redraws (other keybinds like alt+a is).
Brecht Van Lommel removed their assignment 2019-07-08 17:44:42 +02:00
Philipp Oeser was assigned by Brecht Van Lommel 2019-07-08 17:44:42 +02:00

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

@lichtwerk has fixed a few bugs like this before.

@lichtwerk has fixed a few bugs like this before.

This issue was referenced by 6510ab8676

This issue was referenced by 6510ab86764042280787686d35c33caecf47b5ae
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66456
No description provided.