Fix T66456: UV Editor missing update after selection change in 3D viewport

Reviewers: brecht

Maniphest Tasks: T66456

Differential Revision: https://developer.blender.org/D5207